RESOLVED FIXED34803
WebPreferences.cpp fails to compile under VS2010 RC due to #include of shfolder.h
https://bugs.webkit.org/show_bug.cgi?id=34803
Summary WebPreferences.cpp fails to compile under VS2010 RC due to #include of shfold...
Adam Roben (:aroben)
Reported 2010-02-10 08:32:06 PST
Remove unnecessary #include of shfolder.h
Attachments
Patch (1.00 KB, patch)
2010-02-10 08:33 PST, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2010-02-10 08:33:53 PST
Darin Adler
Comment 2 2010-02-10 08:34:42 PST
Comment on attachment 48505 [details] Patch rs=me Build fixes like this also don't need review.
Adam Roben (:aroben)
Comment 3 2010-02-10 08:37:15 PST
(In reply to comment #2) > Build fixes like this also don't need review. I guess you're right. Build fixes for newer toolchains aren't *that* special.
Adam Roben (:aroben)
Comment 4 2010-02-10 08:51:43 PST
Note You need to log in before you can comment on or make changes to this bug.