Remove unnecessary #include of shfolder.h

shfolder.h has been deprecated in newer versions of the Windows SDK.

Fixes <http://webkit.org/b/34803> WebPreferences.cpp fails to compile
under VS2010 RC due to #include of shfolder.h.

Reviewed by Darin Adler.

* WebPreferences.cpp: Removed #include.

git-svn-id: svn://svn.chromium.org/blink/trunk@54604 bbb929c8-8fbe-4397-9dbb-9b2b20218538