third_party/WebKit/WebKit/win/WebPreferences.cpp
@@ -44,7 +44,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <CoreFoundation/CoreFoundation.h>
 #include <limits>
 #include <shlobj.h>
-#include <shfolder.h>
 #include <tchar.h>
 #include <wtf/HashMap.h>
 #include <wtf/OwnArrayPtr.h>
